--- a/README
+++ b/README
@@ -1,6 +1,27 @@
 pagerduty
 
-This is the pagerduty module.
+This Module automatise the deployment of pd-nag-connector available at
+https://github.com/jeffwalter/pd-nag-connector
+And is a fork of https://github.com/KrisBuytaert/puppet-pagerduty-icinga
+
+It is possible to configure the class with the following parameter:
+
+class { 'pagerduty':
+  servicekey                   => 'pagerduty API key',
+  service_notification_period  => '24x7',
+  host_notification_period     => '24x7',
+  service_notification_options => 'w,u,c,r,f',
+  host_notification_options    => 'd,u,r,f',
+  monitoring_cfg_path          => '/path',
+  monitoring_user              => 'icinga_user',
+  monitoring_group             => 'icinga_group',
+  command_file                 => '/path/command_file',
+  status_file                  => '/path/status_file',
+  manage_packages              => 'yes',
+  use_proxy                    => 'no',
+  proxy_proto                  => 'https',
+  proxy                        => 'https://yourproxy:port',
+}
 
 License
 -------
@@ -13,4 +34,4 @@ Contact
 Support
 -------
 
-Please log tickets and issues at our [Projects site](http://projects.example.com)
+github
